--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
           Profile
 
-        --><section>
-          <div class="column-2-3">
+        --><section class="group">
+          <div class="col-2-3">
             <h5>Profile</h5>
             <p>I grew up in Salt Lake City. I spent my days playing sports and riding bikes. I studied Exercise Physiology and Chemistry at the University of Utah.</p>
           </div>
@@ -59,23 +59,24 @@
 
           Interests
 
-        --><section>
-          <div class="column-2-3">
-            <h5>Interests</h5>
-            <p>Some of the things I enjoy are outdoor activities, especially snowboarding. I love watching live music of all sorts and relish a wonderful meal.</p>
-          </div>
+        --><section class="group">
 
           <aside class="col-1-3">
             <div class="main-info">
               <img src="assets/images/foodie.jpg" alt="Interests">
             </div>
           </aside>
+
+          <div class="col-2-3">
+            <h5>Interests</h5>
+            <p>Some of the things I enjoy are outdoor activities, especially snowboarding. I love watching live music and going out to dinner.</p>
+          </div>
         </section><!--
 
           Locations
 
-        --><section>
-          <div class="column-2-3">
+        --><section class="group">
+          <div class="col-2-3">
             <h5>Locations</h5>
             <p>I have been able to live quite a few places over the past years. Quite recently, I was in living in Washington DC. Before that, San Francisco for the last two and a half years.</p>
           </div><!--
